--- a/shared/footer/footer.component.html
+++ b/shared/footer/footer.component.html
@@ -1,1 +1,12 @@
-<p>footer works!</p>
+<div class="app">
+  <div class="footer">
+   <div class="menu-circle"></div>
+   <div class="header-menu">
+    <a class="menu-link is-active" id="Call" href="#">Call us</a>
+    <a class="menu-link is-active" id="Email" href="#">Email us</a>
+   </div>
+
+  </div>
+  <a href="whatsapp://send?phone=0523025612"><svg viewBox="0 0 32 32" class="whatsapp-ico"><path [attr.d]="whatAppSvg" fill-rule="evenodd"></path></svg></a>
+  <div class="overlay-app"></div>
+ </div>
