--- a/pages/student-list/student-list.component.html
+++ b/pages/student-list/student-list.component.html
@@ -1,5 +1,8 @@
 <app-generic-table
-  [columns]="StudentColumns"
-  [displayedColumns]="StudentDisplayedColumns"
-  [table]="table"
+
+  [tableObj]=" {
+    columns:StudentColumns,ModalColumns:ModalColumns,
+    displayedColumns:StudentDisplayedColumns,
+    table:table}"
 ></app-generic-table>
+
