--- a/shared/header/header.component.html
+++ b/shared/header/header.component.html
@@ -3,14 +3,15 @@
  <div class="header">
   <div class="menu-circle"></div>
   <div class="header-menu">
-   <a class="menu-link is-active" href="#">Apps</a>
-   <a class="menu-link notify" href="#">Your work</a>
-   <a class="menu-link" href="#">Discover</a>
-   <a class="menu-link notify" href="#">Market</a>
+
+
+
+   <a class="menu-link " routerLink="sign-up">Sign up</a>
+   <a class="menu-link " routerLink="sign-in">Sign In</a>
+   <a class="menu-link" routerLink="Setting">Setting</a>
+
   </div>
-  <div class="search-bar">
-   <input type="text" placeholder="Search">
-  </div>
+
 
  </div>
 
