--- a/pages/buy-courses/buy-courses.component.html
+++ b/pages/buy-courses/buy-courses.component.html
@@ -3,11 +3,6 @@
   [tableObj]=" {
     columns:CoursesColumns,ModalColumns:ModalColumns,
     displayedColumns:CoursesDisplayedColumns,
-    table:table,FormsInputs:FormsInputs,componentName:'CoursesComponent'}"
+    table:table,componentName:'buyCoursesComponent'}"
 ></app-generic-table>
-
-
-
-
-
 
