--- a/pages/student-list/student-list.component.html
+++ b/pages/student-list/student-list.component.html
@@ -1,8 +1,7 @@
 <app-generic-table
-
   [tableObj]=" {
     columns:StudentColumns,ModalColumns:ModalColumns,
     displayedColumns:StudentDisplayedColumns,
-    table:table}"
+    table:table,FormsInputs:FormsInputs,componentName:'StudentComponent'}"
 ></app-generic-table>
 
