--- a/shared/side-bar-section/side-bar-section.component.html
+++ b/shared/side-bar-section/side-bar-section.component.html
@@ -1,9 +1,9 @@
 <div class="side-wrapper">
   <div class="side-title">{{title}}</div>
-
-
   <div class="side-menu">
-    <a  *ngFor="let menuItem of menuItems" routerLink="{{menuItem.routerLink}}">
+    <a  *ngFor="let menuItem of menuItems" (click)="OpenModal(menuItem)" [routerLink]="menuItem.isDisabled ? null : menuItem.routerLink"
+    (click)="ChangePropertiesHandler(menuItem)"
+    >
       <svg [attr.viewBox]="menuItem.viewBox" [attr.fill]="menuItem.fill">
         <ng-container *ngFor="let path of menuItem.paths">
           <path [attr.d]="path.d" [attr.data-original]="path.dataOriginal" [attr.fill]="path.fill" />
@@ -14,3 +14,4 @@
     </a>
   </div>
 </div>
+
