--- a/auth/sign-up/sign-up.component.html
+++ b/auth/sign-up/sign-up.component.html
@@ -4,7 +4,7 @@
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" height="15" width="15"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg>
       <h3> Sign up</h3>
 </div>
-    <form [formGroup]="subscribeForm" (ngSubmit)="signUpHandler()">
+    <form [formGroup]="subscribeForm" >
       <div class="headline">Subscribe</div>
 
       <input
@@ -13,7 +13,7 @@
         [ngClass]="
           firstName?.touched && firstName?.invalid ? 'input-text__inavlid' : ''
         "
-        placeholder="First name"
+        placeholder="Name"
         formControlName="firstName"
       />
       <div *ngIf="firstName?.touched && firstName?.invalid" class="invalid-message">
@@ -30,16 +30,16 @@
         type="text"
         class="input-text"
         [ngClass]="
-          lastName?.touched && lastName?.invalid ? 'input-text__inavlid' : ''
+        phone?.touched && phone?.invalid ? 'input-text__inavlid' : ''
         "
-        placeholder="Last name"
-        formControlName="lastName"
+        placeholder="phone"
+        formControlName="phone"
       />
-      <div class="invalid-message" *ngIf="lastName?.touched && lastName?.invalid">
+      <div class="invalid-message" *ngIf="phone?.touched && phone?.invalid">
         {{
           this.userInfoService.getInvalidMessage(
-            lastName?.errors,
-            "lastName",
+            phone?.errors,
+            "phone",
             "minlength",
             this.errorMessages.lastName
           )
@@ -57,6 +57,41 @@
           this.userInfoService.getInvalidMessage(
             age?.errors,
             "age",
+            "min",
+            this.errorMessages.age
+          )
+        }}
+      </div>
+      <input
+        type="text"
+        class="input-text"
+        [ngClass]="age?.touched && age?.invalid ? 'input-text__inavlid' : ''"
+        placeholder="birthDate"
+        formControlName="birthDate"
+      />
+      <div class="invalid-message" *ngIf="birthDate?.touched && birthDate?.invalid">
+        {{
+          this.userInfoService.getInvalidMessage(
+            birthDate?.errors,
+            "birthDate",
+            "min",
+            this.errorMessages.age
+          )
+        }}
+      </div>
+
+      <input
+        type="text"
+        class="input-text"
+        [ngClass]="address?.touched && address?.invalid ? 'input-text__inavlid' : ''"
+        placeholder="Address"
+        formControlName="address"
+      />
+      <div class="invalid-message" *ngIf="address?.touched && address?.invalid">
+        {{
+          this.userInfoService.getInvalidMessage(
+            birthDate?.errors,
+            "address",
             "min",
             this.errorMessages.age
           )
@@ -103,11 +138,19 @@
 
       </div>
 
+      <label>
+        <input (click)="userType='professor';onClick()" name="user-type" type="radio" value="professor" [checked]="true">
+        Professor
+      </label>
+      <label>
+        <input (click)="userType='Student'"   name="user-type" type="radio" value="student">
+        Student
+      </label>
 
     </form>
      <a ></a>
 
-     <button class="custom-btn btn-16 align" [disabled]="subscribeForm.invalid"><span>Submit</span></button>
+     <button (click)="signUpHandler();" class="custom-btn btn-16 align" [disabled]="!subscribeForm.valid"><span>Submit</span></button>
 
 
   </div>
