--- a/pages/my-courses/my-courses.component.html
+++ b/pages/my-courses/my-courses.component.html
@@ -3,11 +3,5 @@
   [tableObj]=" {
     columns:CoursesColumns,ModalColumns:ModalColumns,
     displayedColumns:CoursesDisplayedColumns,
-    table:table,FormsInputs:FormsInputs,componentName:'CoursesComponent'}"
+    table:table}"
 ></app-generic-table>
-
-
-
-
-
-
