--- a/auth/sign-up/sign-up.component.html
+++ b/auth/sign-up/sign-up.component.html
@@ -139,7 +139,7 @@
       </div>
 
       <label>
-        <input (click)="userType='professor';onClick()" name="user-type" type="radio" value="professor" [checked]="true">
+        <input (click)="userType='professor'" name="user-type" type="radio" value="professor" [checked]="true">
         Professor
       </label>
       <label>
