--- a/pages/buy-courses/buy-courses.component.html
+++ b/pages/buy-courses/buy-courses.component.html
@@ -1,8 +1,4 @@
 <app-generic-table
-
-  [tableObj]=" {
-    columns:CoursesColumns,ModalColumns:ModalColumns,
-    displayedColumns:CoursesDisplayedColumns,
-    table:table,componentName:'buyCoursesComponent'}"
+  [tableObj]="tableObj"
 ></app-generic-table>
 
