--- a/pages/courses-list/courses-list.component.html
+++ b/pages/courses-list/courses-list.component.html
@@ -1,9 +1,5 @@
 <app-generic-table
-
-  [tableObj]=" {
-    columns:CoursesColumns,ModalColumns:ModalColumns,
-    displayedColumns:CoursesDisplayedColumns,
-    table:table,FormsInputs:FormsInputs,componentName:'CoursesComponent'}"
+  [tableObj]="tableObj"
 ></app-generic-table>
 
 
