--- a/pages/my-courses/my-courses.component.html
+++ b/pages/my-courses/my-courses.component.html
@@ -1,7 +1,3 @@
 <app-generic-table
-
-  [tableObj]=" {
-    columns:CoursesColumns,ModalColumns:ModalColumns,
-    displayedColumns:CoursesDisplayedColumns,
-    table:table}"
+  [tableObj]="tableObj"
 ></app-generic-table>
