--- a/pages/class-attendees-list/class-attendees-list.component.html
+++ b/pages/class-attendees-list/class-attendees-list.component.html
@@ -1,9 +1,5 @@
 <app-generic-table
-
-  [tableObj]=" {
-    columns:CoursesColumns,ModalColumns:ModalColumns,
-    displayedColumns:CoursesDisplayedColumns,
-    table:table,componentName:'ClassAttendeesComponent'}"
+  [tableObj]="tableObj"
 ></app-generic-table>
 
 <a class="metting" href="https://us02web.zoom.us/j/485823978?pwd=NmNtLzd5eEx2bldFL0szYys2MEorQT09#success">open metting</a>
