--- a/pages/student-list/student-list.component.html
+++ b/pages/student-list/student-list.component.html
@@ -1,7 +1,4 @@
 <app-generic-table
-  [tableObj]=" {
-    columns:StudentColumns,ModalColumns:ModalColumns,
-    displayedColumns:StudentDisplayedColumns,
-    table:table,FormsInputs:FormsInputs,componentName:'StudentComponent'}"
+  [tableObj]="tableObj"
 ></app-generic-table>
 
