--- a/shared/generic-table/generic-table.component.css
+++ b/shared/generic-table/generic-table.component.css
@@ -182,6 +182,7 @@ svg{
 .mat-mdc-table tbody, .mat-mdc-table tfoot, .mat-mdc-table thead, .mat-mdc-cell, .mat-mdc-footer-cell, .mat-mdc-header-row, .mat-mdc-row, .mat-mdc-footer-row, .mat-mdc-table .mat-mdc-header-cell
 {
   max-width: 107px;
+  cursor: pointer;
 }
 
 
