--- a/shared/generic-table/generic-table.component.html
+++ b/shared/generic-table/generic-table.component.html
@@ -1,9 +1,15 @@
 <div *ngIf="!isLoadingSignVisible" class="table-container">
-  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 border ">
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 border">
     <ng-container *ngFor="let column of tableObj.displayedColumns" [matColumnDef]="column">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{column}}</th>
-      <td mat-cell *matCellDef="let element" [innerHTML]="sanitizer.bypassSecurityTrustHtml(element[column])" (click)="OpenModal(column,element)">></td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
+      <td
+        mat-cell
+        *matCellDef="let element"
+        [innerHTML]="sanitizer.bypassSecurityTrustHtml(element[column])"
+        (click)="OpenModal(column, element)"
+      ></td>
     </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="tableObj.displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: tableObj.displayedColumns;"></tr>
   </table>
