--- a/shared/header/header.component.scss
+++ b/shared/header/header.component.scss
@@ -255,6 +255,7 @@ body.light-mode .video-bg:before {
  display: flex;
  align-items: center;
  padding: 0 16px 0 40px;
+
  margin-left: auto;
  flex-shrink: 0;
  svg {
@@ -366,6 +367,7 @@ body.light-mode .video-bg:before {
 }
 
 .updates {
+  opacity: 0;
  position: relative;
  top: 0;
  right: 0;
