--- a/shared/navbar/navbar.component.html
+++ b/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="isNavBarVisible" class="left-side">
-  <app-side-bar-section *ngFor="let item of menuArray"
+  <app-side-bar-section *ngFor="let item of menuCatalog"
     [title]="item.title"
     [menuItems]="item.menuItems"
   ></app-side-bar-section>
