--- a/shared/footer/footer.component.scss
+++ b/shared/footer/footer.component.scss
@@ -9,6 +9,10 @@ body{
     padding: 3px;
     background-color: #4dc247;
     border-radius: 50%;
+    filter: grayscale(30%);
+    transition: filter 1.3s ease;
+
+    transition: 0.3;
     box-shadow: 2px 2px 6px rgba(0,0,0,0.4);
     /* box-shadow: 2px 2px 11px rgba(0,0,0,0.7); */
     position: fixed;
@@ -19,6 +23,7 @@ body{
 
 .whatsapp-ico:hover{
     box-shadow: 2px 2px 11px rgba(0,0,0,0.7);
+  filter: none;
 }
 .footer {
   background:rgb(4 4 4 / 84%);
