--- a/shared/footer/footer.component.html
+++ b/shared/footer/footer.component.html
@@ -2,8 +2,9 @@
   <div class="footer">
    <div class="menu-circle"></div>
    <div class="header-menu">
-    <a class="menu-link is-active" id="Call" href="#">Call us</a>
-    <a class="menu-link is-active" id="Email" href="#">Email us</a>
+    <a class="menu-link is-active" id="Call" href="tel:+1234567890">Call us</a>
+<a class="menu-link is-active" id="Email" href="mailto:contact@yourdomain.com">Email us</a>
+
    </div>
 
   </div>
