--- a/pages/report-attendace/report-attendace.component.html
+++ b/pages/report-attendace/report-attendace.component.html
@@ -37,6 +37,8 @@
 
 
       <button class="custom-btn btn-16" (click)="handleAttendeeReporting()"><span>Report</span></button>
+      <button class="custom-btn btn-16" (click)="clearForm()"><span>Clear form</span></button>
+
     </form>
 
   </div>
