--- a/shared/footer/footer.component.scss
+++ b/shared/footer/footer.component.scss
@@ -26,7 +26,7 @@ body{
   filter: none;
 }
 .footer {
-  background:rgb(4 4 4 / 84%);
+  background:#212529;
   box-shadow: -1px 0px 23px 0px rgba(0,0,0,0.43);
   -webkit-box-shadow: -1px 0px 23px 0px rgba(0,0,0,0.43);
   -moz-box-shadow: -1px 0px 23px 0px rgba(0,0,0,0.43);
