--- a/shared/header/header.component.scss
+++ b/shared/header/header.component.scss
@@ -148,7 +148,7 @@ body.light-mode .video-bg:before {
   color: #fff;
 }
 .header {
-  background: black;
+  background: rgb(33, 37, 41);
   box-shadow: -1px 0px 23px 9px rgba(0,0,0,0.43);
   -webkit-box-shadow: -1px 0px 23px 9px rgba(0,0,0,0.43);
   -moz-box-shadow: -1px 0px 23px 9px rgba(0,0,0,0.43);
